# Skripsi

doc/DokumenSkripsi/: .gitignore  data.tex  dosen.tex  referensi.bib  skripsi.nlo
doc/DokumenSkripsi/Bab/: bab1.tex  bab2.tex  bab3.tex  bab4.tex  bab5.tex  bab6.tex
doc/DokumenSkripsi/Lampiran/: CMakeLists.txt  help.txt  lampA.tex  lampB.tex  main.c  man.txt
doc/ProgressReport/: .gitignore  document.bbl  document.blg  document.tex  referensi.bib
doc/RencanaKerja/: document.out  document.tex
source/: .gitignore  CMakeLists.txt  main.c
source/additionals/linux/: kiritool.1
